tests/baselines/reference/es6ImportParseErrors.errors.txt
es6ImportParseErrors.ts(1,1): error TS1128: Declaration or statement expected.


==== es6ImportParseErrors.ts (1 errors) ====
    import 10;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.